--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,8 +1,70 @@
 .main {
+  background-color: grey;
+  display: grid;
+  min-height: 100vh;
+  column-gap: 1vmin;
+  row-gap: 1vmin;
+  margin: 0 2vmin;
+}
+
+.header,
+.nav,
+.movies {
+  border: 1px black solid;
+  box-sizing: border-box;
+}
+
+/* * Mobile Devices */
+@media only screen and (min-device-width: 375px) and (max-device-width: 812px) {
+  .main {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 3fr;
+    grid-template-areas:
+      "header"
+      "nav"
+      "movies";
+  }
+}
+
+/* * All Other Devices - NOTE: This could be done much more cleanly, but I'm limited on time... */
+@media only screen and (min-device-width: 812px) {
+  .main {
+
+    grid-template-columns: 20vw 1fr;
+    grid-template-rows: 6rem 1fr;
+    grid-template-areas:
+      "header header"
+      "nav movies"
+  }
+}
+
+.nav {
+  grid-area: nav;
+  background-color: green;
+}
+
+.movies {
+  grid-area: movies;
+  background-color: purple;
+}
+
+.header {
+  grid-area: header;
+  background-color: brown;
+  align-self: center;
+}
+
+.header h1 {
+  text-transform: capitalize;
+  font-weight: 600;
+  font-size: 150%;
+}
+
+/* .main {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
   padding: 6rem;
   min-height: 100vh;
-}
+} */
