--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -20,21 +20,20 @@
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr 3fr;
     grid-template-areas:
-      "header"
-      "nav"
-      "movies";
+      'header'
+      'nav'
+      'movies';
   }
 }
 
 /* * All Other Devices - NOTE: This could be done much more cleanly, but I'm limited on time... */
 @media only screen and (min-device-width: 812px) {
   .main {
-
     grid-template-columns: 20vw 1fr;
     grid-template-rows: 6rem 1fr;
     grid-template-areas:
-      "header header"
-      "nav movies"
+      'header header'
+      'nav movies';
   }
 }
 
