--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -8,8 +8,9 @@
 /* * Mobile Devices */
 @media only screen and (min-device-width: 375px) and (max-device-width: 812px) {
   .main {
+    margin: 1vmin;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr 3fr;
+    grid-template-rows: 3rem minmax(25vh, min-content) auto;
     grid-template-areas:
       'header'
       'nav'
