--- a/src/components/Nav/FilterAccordion/FilterAccordion.module.css
+++ b/src/components/Nav/FilterAccordion/FilterAccordion.module.css
@@ -3,5 +3,7 @@
 }
 
 .input {
-    @apply border border-stone-200 px-4 py-2 rounded-sm hover:bg-stone-100 focus:bg-stone-100 active:bg-stone-100;
+    @apply border border-stone-200 px-4 py-2 rounded-md;
+    @apply hover:bg-stone-100 focus:bg-stone-100 active:bg-stone-100;
+    @apply w-[235px];
 }
