--- a/src/components/MovieCard/MovieCard.module.css
+++ b/src/components/MovieCard/MovieCard.module.css
@@ -1,3 +1,3 @@
 .container {
-    @apply flex flex-col bg-white rounded-lg overflow-hidden shadow-lg border-stone-200 border;
+  @apply flex flex-col bg-white rounded-lg overflow-hidden shadow-lg border-stone-200 border cursor-pointer;
 }
